hphp/hack/test/typecheck/reactive/rx_if_implements1.php.exp
File "rx_if_implements1.php", line 7, characters 10-16:
Function cannot be marked with <<__OnlyRxIfImpl>> annotation. (NastCheck[3057])
